settings finale docker-compose

--- a/db.ini
+++ b/db.ini
@@ -10,10 +10,10 @@
 ; <http://omeka.org/codex/Database_Configuration_File>.
 
 [database]
-host     = "db573644727.db.1and1.com"
-username = "dbo573644727"
-password = "omeka123!"
-dbname   = "db573644727"
+host     = "mariadb"
+username = "drupal"
+password = "drupal"
+dbname   = "drupal"
 prefix   = "omeka_"
 charset  = "utf8"
 ;port     = "3306"
