--- a/.htaccess
+++ b/.htaccess
@@ -10,8 +10,7 @@
 #
 # Note: This should only be enabled for development or debugging. Keep this
 # line commented for production sites.
-# 
-
+#
 SetEnv APPLICATION_ENV development
 
 # ------------- #
@@ -23,7 +22,7 @@ RewriteEngine on
 # If you know mod_rewrite is enabled, but you are still getting mod_rewrite
 # errors, uncomment the line below and replace "/" with your base directory.
 #
-RewriteBase /
+# RewriteBase /
 
 # Allow direct access to files (except PHP files)
 RewriteCond %{REQUEST_FILENAME} -f
