--- a/application/config/config.ini
+++ b/application/config/config.ini
@@ -47,7 +47,7 @@ debug.exceptions = true
 ;
 ; The request data shows what routes and variables Omeka has parsed from
 ; each request.
-debug.request = false
+; debug.request = true
 
 ; debug.profileDb
 ; Enable the query profiler.
@@ -240,8 +240,8 @@ mail.transport.type = "Sendmail"
 ; Set the maximum file upload size.
 ; default: 10M
 ;
-; Uncomment the following line to set the maximum file upload size. This 
-; configuration will not exceed the maximum beyond what is set in the 
+; Uncomment the following line to set the maximum file upload size. This
+; configuration will not exceed the maximum beyond what is set in the
 ; 'post_max_size' or 'upload_max_filesize' core php.ini directives.
 ;
 ;upload.maxFileSize = "10M"
